--- a/src/components/Swapform/style.module.scss
+++ b/src/components/Swapform/style.module.scss
@@ -36,8 +36,30 @@
 }
 .tokenInput{
     background: #fff;
+    width: 180px;
 }
+
 .tokenBtn{
     font-size: 24px;
     font-weight: bold;
+}
+
+.orderActive{
+    color:#000;
+    width: 180px;
+}
+
+.orderDective{
+    color:red;
+    width: 180px;
+}
+.label{
+    color: rgba(0, 0, 0, 0.87);
+    font-size: 20px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+}
+.formControl{
+    width: 180px;
 }
