--- a/src/components/Swapform/ReviewForm/style.module.scss
+++ b/src/components/Swapform/ReviewForm/style.module.scss
@@ -46,7 +46,7 @@
             justify-content: space-between;
             align-items: center;
         }
-        .detailRate{
+        .detailRate, .detailFee{
             display: flex;
             justify-content: space-between;
             align-items: center;
